--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -61,7 +61,9 @@ spec:
             - name: GOOGLE_CLOUD_PROJECT_ID
               value: "flora-287616"
             - name: GOOGLE_CLOUD_STORAGE_BUCKET
-              value: "artifacts.flora-287616.appspot.com"
+              value: "flora-flora"
+            - name: GOOGLE_CLOUD_KEY_FILE
+              value: /var/www/key.json
         # Change <INSTANCE_CONNECTION_NAME> here to include your GCP
         # project, the region of your Cloud SQL instance and the name
         # of your Cloud SQL instance. The format is $PROJECT:$REGION:$INSTANCE
